--- a/src/app/projekt/projekt-egy/projekt-egy.component.html
+++ b/src/app/projekt/projekt-egy/projekt-egy.component.html
@@ -109,7 +109,11 @@
   </ng-container>
 
   <ng-container *ngIf="egymode === 24">
-    <div [@rowanimation]><app-projektkapcsolat-list></app-projektkapcsolat-list></div>
+    <div [@rowanimation]>
+      <app-projektkapcsolat-list [Projektkod]="projektservice.Dto[projektservice.DtoSelectedIndex].Projektkod"
+                                 [Ugyfelkod]="projektservice.Dto[projektservice.DtoSelectedIndex].Ugyfelkod">
+      </app-projektkapcsolat-list>
+    </div>
   </ng-container>
 
   <ng-container *ngIf="egymode === 25">
