--- a/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-levalasztas/projektkapcsolat-levalasztas.component.html
@@ -1,5 +1,5 @@
 <div class="alapkeret">
-  <h5>{{projektkapcsolatservice.Dto[projektkapcsolatservice.DtoSelectedIndex].Kapcsolat}} leválasztása</h5>
+  <h5>{{Dto.Kapcsolat}} leválasztása</h5>
   <p>Biztosan le akarja választani ezt a tételt a projektről?</p>
   <div class="row no-gutters" style="margin-bottom: 10px">
     <button class="btn btn-sm btn-primary" [disabled]="eppFrissit" type="button" (click)="ok()">Ok</button>
