--- a/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
@@ -5,24 +5,67 @@
       <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="onUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="doUjtetel()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
   <app-tabla #tabla
-             [items]="szamlazasirendservice.Dto"
+             [items]="Dto"
              [colsets]="szamlazasirendservice.GridSettings"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
+
   <ng-template #griduj>
     <app-szamlazasirend-szerkesztes [uj] = "true"
-                                    (eventSzerkeszteskesz)="onUjkesz()">
+                                    [Projektkod]="Projektkod"
+                                    (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-szamlazasirend-szerkesztes>
   </ng-template>
+
   <ng-template #gridegy>
-    <app-szamlazasirend-egy (eventTorlesutan)="onTorlesutan()"></app-szamlazasirend-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="szamlazasirendservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="szamlazasirendservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="szamlazasirendservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-szamlazasirend-szerkesztes [uj]="false"
+                                          [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                          (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-szamlazasirend-szerkesztes>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
