--- a/src/app/projektteendo/projekt-teendo-list/projekt-teendo-list.component.html
+++ b/src/app/projektteendo/projekt-teendo-list/projekt-teendo-list.component.html
@@ -5,13 +5,13 @@
       <button [disabled]="eppFrissit" (click)="onKereses()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins" style="margin-right: 3px">
         <i class="fa fa-search" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit" (click)="onUj()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit" (click)="onUjtetel()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-plus" aria-hidden="true"></i>
       </button>
     </nav>
   </div>
   <app-tabla #tabla
-             [items]="projektteendoservice.Dto"
+             [items]="Dto"
              [colsets]="projektteendoservice.GridSettings"
              (forid)="onId($event)"
              [ujTemplate]="griduj"
@@ -20,11 +20,62 @@
 
   <ng-template #griduj>
     <app-projekt-teendo-szerkesztes [uj] = "true"
-                                    (eventSzerkeszteskesz)="onUjkesz()">
+                                    [Projektkod]="Projektkod"
+                                    (eventSzerkeszteskesz)="onUjtetelkesz($event)">
     </app-projekt-teendo-szerkesztes>
   </ng-template>
 
   <ng-template #gridegy>
-    <app-projekt-teendo-egy (eventTorlesutan)="onTorlesutan()"></app-projekt-teendo-egy>
+    <div class="alapkeret">
+      <div>
+        <nav>
+          <button [disabled]="eppFrissit" (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-minus" aria-hidden="true"></i>
+          </button>
+          <button [disabled]="eppFrissit" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            <i class="fa fa-edit" aria-hidden="true"></i>
+          </button>
+
+          <button [disabled]="eppFrissit" (click)="doNav(18)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+            Elvégezve
+          </button>
+        </nav>
+      </div>
+
+      <ng-container *ngIf="egymode === 1">
+        <div [@rowanimation]>
+          <app-reszletek [cim]="projektteendoservice.cim"
+                         [item]="Dto[DtoSelectedIndex]"
+                         [colsets]="projektteendoservice.ReszletekSettings">
+          </app-reszletek>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 2">
+        <div [@rowanimation]>
+          <app-tetel-torles [cim]="projektteendoservice.cim"
+                            [eppFrissit]="eppFrissit"
+                            (eventTorles)="onTorles($event)">
+          </app-tetel-torles>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 3">
+        <div [@rowanimation]>
+          <app-projekt-teendo-szerkesztes [uj]="false"
+                                          [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                          (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-projekt-teendo-szerkesztes>
+        </div>
+      </ng-container>
+      <ng-container *ngIf="egymode === 18">
+        <div [@rowanimation]>
+          <app-projekt-teendo-elvegezve [DtoOriginal]="Dto[DtoSelectedIndex]"
+                                        (eventSzerkeszteskesz)="onModositaskesz($event)">
+          </app-projekt-teendo-elvegezve>
+        </div>
+      </ng-container>
+    </div>
   </ng-template>
 </div>
