irat projektje globális változók nélkül

--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -70,7 +70,7 @@
       <app-irat-nincsprojekt *ngIf="nincsProjekt"></app-irat-nincsprojekt>
       <app-reszletek *ngIf="!nincsProjekt"
                      [cim]="projektservice.cim"
-                     [item]="projektservice.Dto[projektservice.DtoSelectedIndex]"
+                     [item]="IratProjektje"
                      [colsets]="projektservice.ReszletekSettings">
       </app-reszletek>
     </div>
