ajánlat is a projektkapcsolat táblában

--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -104,7 +104,7 @@
       <button class="btn btn-sm btn-primary" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
               type="button" (click)="onSubmit()">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="eppFrissit || ajanlatservice.AjanlatContainerMode === 2"
-              style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+              style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 </div>
 
