--- a/src/app/projektkapcsolat/projektkapcsolat-tabla/projektkapcsolat-tabla.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-tabla/projektkapcsolat-tabla.component.html
@@ -27,6 +27,11 @@
         <ng-template *ngTemplateOutlet="egyUjirat"></ng-template>
       </td>
     </tr>
+    <tr *ngIf="ujajanlatOk && egyUjajanlat !== undefined" class="active">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyUjajanlat"></ng-template>
+      </td>
+    </tr>
 
     <ng-container *ngFor="let item of items; let i = index">
       <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
