--- a/src/app/projekt/projekt-inverter/projekt-inverter.component.html
+++ b/src/app/projekt/projekt-inverter/projekt-inverter.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Inverter</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="inverter"
                maxlength="50" autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.Inverter"
+               [(ngModel)]="DtoEdited.Inverter"
                name="inverter">
       </div>
     </div>
@@ -17,7 +17,7 @@
       <div>
         <div class="egylabel">AC, kVA</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="ackva"
-               [(ngModel)]="projektservice.DtoEdited.Ackva"
+               [(ngModel)]="DtoEdited.Ackva"
                name="ackva">
       </div>
     </div>
