--- a/src/app/projekt/projekt-napelem/projekt-napelem.component.html
+++ b/src/app/projekt/projekt-napelem/projekt-napelem.component.html
@@ -8,7 +8,7 @@
         <div class="egylabel">Napelem</div>
         <input type="text" class="form-control form-control-sm oszlop4" id="napelem"
                maxlength="50" autocomplete="off"
-               [(ngModel)]="projektservice.DtoEdited.Napelem"
+               [(ngModel)]="DtoEdited.Napelem"
                name="napelem">
       </div>
     </div>
@@ -17,7 +17,7 @@
       <div>
         <div class="egylabel">DC, kW</div>
         <input type="number" class="form-control form-control-sm oszlop2" id="dckw"
-               [(ngModel)]="projektservice.DtoEdited.Dckw"
+               [(ngModel)]="DtoEdited.Dckw"
                name="dckw">
       </div>
     </div>
